--- a/ngls-web-customer/src/main/resources/application.properties
+++ b/ngls-web-customer/src/main/resources/application.properties
@@ -1,21 +1,28 @@
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/easy-car-insurance?useUnicode=true&characterEncoding=utf-8
+# 客户端端口配置
+server.port=8081
+# 使用druid数据源
+spring.datasource.name=consoleDataSource
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/easy-car-insurance?useUnicode=true&amp;zeroDateTimeBehavior=convertToNull&amp;useServerPrepStmts=false&amp;characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=Jia5201314
+spring.datasource.password=root
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.initialSize=2
+spring.datasource.minIdle=2
+spring.datasource.maxActive=10
+spring.datasource.filters=stat,filter
+spring.datasource.connectionInitSqls=set names utf8mb4;
+spring.datasource.validationQuery=select count(1)
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=20
 
-#数据库连接池
-spring.datasource.initialSize=5  
-spring.datasource.minIdle=5  
-spring.datasource.maxActive=20  
-spring.datasource.maxWait=60000  
-spring.datasource.timeBetweenEvictionRunsMillis=60000  
-spring.datasource.minEvictableIdleTimeMillis=300000  
-spring.datasource.validationQuery=SELECT 1 FROM DUAL  
-spring.datasource.testWhileIdle=true  
-spring.datasource.testOnBorrow=false  
-spring.datasource.testOnReturn=false  
-spring.datasource.poolPreparedStatements=true  
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20 
-spring.datasource.filters=stat,wall,log4j  
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+# MyBatis配置
+# mybatis.config-location=classpath:mybatis-config.xml
+mybatis.mapper-locations=classpath*:user/sqlmap/*.xml
+mybatis.type-aliases-package=com.ngls.user.domain.*
