--- a/ngls-web-console/pom.xml
+++ b/ngls-web-console/pom.xml
@@ -2,27 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.ngls</groupId>
+        <artifactId>easy-car-insurance</artifactId>
+        <version>${parent.version}</version>
+    </parent>
 
-    <groupId>com.ngls</groupId>
     <artifactId>ngls-web-console</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${ngls-web-console.version}</version>
     <packaging>jar</packaging>
 
     <name>ngls-web-console</name>
     <description>Web Console</description>
-
-    <parent>
-        <groupId>com.ngls</groupId>
-        <artifactId>easy-car-insurance</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -32,9 +23,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -50,7 +39,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
