--- a/ngls-web-customer/pom.xml
+++ b/ngls-web-customer/pom.xml
@@ -2,38 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.ngls</groupId>
+        <artifactId>easy-car-insurance</artifactId>
+        <version>${parent.version}</version>
+    </parent>
 
-    <groupId>com.ngls</groupId>
     <artifactId>ngls-web-customer</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${ngls-web-customer.version}</version>
     <packaging>jar</packaging>
 
     <name>ngls-web-customer</name>
     <description>Web Customer</description>
 
-    <parent>
-        <groupId>com.ngls</groupId>
-        <artifactId>easy-car-insurance</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-    </properties>
-
     <dependencies>
-
         <!-- module dependency start -->
-
         <dependency>
             <groupId>com.ngls</groupId>
             <artifactId>ngls-module-user</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
         <!-- module dependency end -->
 
         <dependency>
@@ -43,7 +30,6 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
         </dependency>
 
         <dependency>
@@ -77,7 +63,6 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.0.25</version>
         </dependency>
     </dependencies>
 
