--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>ngls-web-customer</module>
         <module>ngls-web-console</module>
         <module>ngls-module-user</module>
+        <module>ngls-common-utils</module>
     </modules>
 
     <properties>
@@ -30,6 +31,7 @@
         <ngls-web-customer.version>0.0.1-SNAPSHOT</ngls-web-customer.version>
         <ngls-web-console.version>0.0.1-SNAPSHOT</ngls-web-console.version>
         <ngls-module-user.version>0.0.1-SNAPSHOT</ngls-module-user.version>
+        <ngls-common-utils.version>0.0.1-SNAPSHOT</ngls-common-utils.version>
 
         <!-- 工程基础属性 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,6 +41,10 @@
         <!-- 依赖配置 -->
         <mybatis-spring-boot-starter.version>1.3.2</mybatis-spring-boot-starter.version>
         <druid.version>1.0.25</druid.version>
+        <commons-lang3.version>3.7</commons-lang3.version>
+        <guava.version>18.0</guava.version>
+        <springfox-swagger2.version>2.6.1</springfox-swagger2.version>
+        <springfox-swagger-ui.version>2.6.1</springfox-swagger-ui.version>
     </properties>
 
     <!-- 依赖管理 -->
@@ -60,6 +66,11 @@
                 <artifactId>ngls-module-user</artifactId>
                 <version>${ngls-module-user.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.ngls</groupId>
+                <artifactId>ngls-common-utils</artifactId>
+                <version>${ngls-common-utils.version}</version>
+            </dependency>
 
             <!-- MyBatis -->
             <dependency>
@@ -74,10 +85,41 @@
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
+            <!-- Swagger2 -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${springfox-swagger2.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${springfox-swagger-ui.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
+        <!-- 公共模块依赖 -->
+        <dependency>
+            <groupId>com.ngls</groupId>
+            <artifactId>ngls-common-utils</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -118,6 +160,26 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
+        </dependency>
+
+        <!-- Swagger2 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+
+        <!-- 工具包 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
     </dependencies>
 
