--- a/ngls-web-customer/src/main/resources/application.properties
+++ b/ngls-web-customer/src/main/resources/application.properties
@@ -10,5 +10,16 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # MyBatis配置
 # mybatis.config-location=classpath:mybatis-config.xml
-mybatis.mapper-locations=classpath*:user/sqlmap/*.xml
+mybatis.mapper-locations=classpath:user/sqlmap/*.xml
 mybatis.type-aliases-package=com.ngls.user.domain.*
+
+# JPA配置
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+# 表中字段命名策略,这里要引入hibernate的核心包，不然这个命名策略会报错
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+# 方言
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
