--- a/ngls-web-customer/src/main/resources/application.properties
+++ b/ngls-web-customer/src/main/resources/application.properties
@@ -23,3 +23,13 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 #spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 # 方言
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# 微信配置
+wechat.login.weixin.app.id=wx86cda25179d1a5b3
+wechat.login.weixin.app.secret=12ca9a3159cbfe33e97
+# 是否允许写入Session
+http.session.enable=true
+# 全局异常配置
+global.exception.enable=true
+# HTTP调试打印开关，true则输出http请求信息
+logback.http.debug.enable=true
