--- a/ngls-web-customer/src/main/resources/application.properties
+++ b/ngls-web-customer/src/main/resources/application.properties
@@ -4,14 +4,14 @@ server.port=8081
 spring.datasource.name=consoleDataSource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/easy-car-insurance?useUnicode=true&amp;zeroDateTimeBehavior=convertToNull&amp;useServerPrepStmts=false&amp;characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=Jia5201314
+spring.datasource.password=root
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # MyBatis配置
 # mybatis.config-location=classpath:mybatis-config.xml
-mybatis.mapper-locations=classpath:user/sqlmap/*.xml
-mybatis.type-aliases-package=com.ngls.user.domain.*
+#mybatis.mapper-locations=classpath:user/sqlmap/*.xml
+#mybatis.type-aliases-package=com.ngls.user.domain.*
 
 # JPA配置
 spring.jpa.database=mysql
@@ -26,7 +26,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # 微信配置
 wechat.login.weixin.app.id=wx86cda25179d1a5b3
-wechat.login.weixin.app.secret=12ca9a3159cbfe33e97
+wechat.login.weixin.app.secret=12ca9a3159cbfe33e97decaa68f2e7aa
 # 是否允许写入Session
 http.session.enable=true
 # 全局异常配置
