--- a/ngls-web-customer/src/main/resources/application.properties
+++ b/ngls-web-customer/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.password=root
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+
 # MyBatis配置
 # mybatis.config-location=classpath:mybatis-config.xml
 #mybatis.mapper-locations=classpath:user/sqlmap/*.xml
