--- a/ngls-web-customer/src/main/resources/application.properties
+++ b/ngls-web-customer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8081
 spring.datasource.name=consoleDataSource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/easy-car-insurance?useUnicode=true&amp;zeroDateTimeBehavior=convertToNull&amp;useServerPrepStmts=false&amp;characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Jia5201314
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
