--- a/ngls-web-customer/src/main/resources/application.properties
+++ b/ngls-web-customer/src/main/resources/application.properties
@@ -37,3 +37,5 @@ http.session.enable=true
 global.exception.enable=true
 # HTTP调试打印开关，true则输出http请求信息
 logback.http.debug.enable=true
+
+spring.jackson.serialization.write-dates-as-timestamps=true
